[package]
name = "tokio-demo"
version = "0.1.0"
authors = ["Ahmed Miljau <ahmed.miljau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features= [ "rt", "net" , "rt-multi-thread", "macros", "io-util", "time"]}
